@@ -2025,3 +2025,35 @@ strxns/TODO
 .*.swp
 tags
 TODO
+striso/src/perl/EN300292.new.gdmo
+striso/src/perl/ES200653.new.gdmo
+striso/src/perl/ES201097-1.new.gdmo
+striso/src/perl/G.774.1.new.gdmo
+striso/src/perl/G.774.2.new.gdmo
+striso/src/perl/G.774.3.new.gdmo
+striso/src/perl/G.774.4.new.gdmo
+striso/src/perl/G.774.5.new.gdmo
+striso/src/perl/G.774.new.gdmo
+striso/src/perl/ISO10589.new.gdmo
+striso/src/perl/M.3100.new.gdmo
+striso/src/perl/Q.751.1.new.gdmo
+striso/src/perl/Q.751.2.new.gdmo
+striso/src/perl/Q.821.new.gdmo
+striso/src/perl/Q.822.new.gdmo
+striso/src/perl/Q.826.new.gdmo
+striso/src/perl/T1.116.1.new.gdmo
+striso/src/perl/T1.116.1D.new.gdmo
+striso/src/perl/X.283.new.gdmo
+striso/src/perl/X.521.new.gdmo
+striso/src/perl/X.721.new.gdmo
+striso/src/perl/X.723.new.gdmo
+striso/src/perl/X.737.new.gdmo
+striso/src/perl/X.738.new.gdmo
+striso/src/perl/X.739.new.gdmo
+striso/src/perl/X.740.new.gdmo
+striso/src/perl/X.741.new.gdmo
+striso/src/perl/X.742.new.gdmo
+striso/src/perl/X.743.new.gdmo
+striso/src/perl/X.744.new.gdmo
+striso/src/perl/X.745.new.gdmo
+striso/src/perl/X.746.new.gdmo
